--- a/portfolio site/style.css
+++ b/portfolio site/style.css
@@ -36,7 +36,7 @@ section {
 	position: relative;
 	width: 100%;
 	min-height: 100vh;
-	background: pink;
+	background: #fff;
 }
 
 .banner .imgSidebar {
